--- a/DevCPU/plugin.xml
+++ b/DevCPU/plugin.xml
@@ -304,7 +304,7 @@
       </activity>
       <activityPatternBinding
             activityId="DevCPU.hiddenviews"
-            pattern=".*(?&lt;!devcpu.{0,999})(jdt\.ui\.|ierarchy).*">
+            pattern=".*(?&lt;!devcpu.{0,999})(jdt\.ui\.|ierarchy|.*?debug).*">
       </activityPatternBinding>
    </extension>
    <extension
