Re-enable Welcome page; Update license and version

--- a/DevCPU/build.properties
+++ b/DevCPU/build.properties
@@ -30,7 +30,8 @@ bin.includes = plugin.xml,\
                liblwjgl64.so,\
                libopenal.so,\
                libopenal64.so,\
-               openal.dylib
+               openal.dylib,\
+               license.txt
 jars.compile.order = .
 source.. = src/
 jre.compilation.profile = JavaSE-1.6
