--- a/DevCPU/plugin.xml
+++ b/DevCPU/plugin.xml
@@ -535,7 +535,7 @@
          </contextualLaunch>
       </shortcut>
    </extension>-->
-   <!-- <extension point="org.eclipse.ui.intro"> 
+   <extension point="org.eclipse.ui.intro"> 
    <intro
             class="devcpu.IntroPart"
             id="devcpu.intro"
@@ -560,6 +560,6 @@
             </implementation>
          </presentation>
       </config>
-   </extension> -->
+   </extension>
 
 </plugin>
