I really shouldn't be committing when it's in this state :D Note to self: Resolve apparent CPU abuse by some views soon; it's getting ridiculous.

--- a/DevCPU/plugin.xml
+++ b/DevCPU/plugin.xml
@@ -80,7 +80,7 @@
       <view
             allowMultiple="false"
             class="devcpu.views.hex.HexView"
-            id="HexView"
+            id="devcpu.hexview"
             name="HexView">
       </view>
 <!--      <view
