--- a/DevCPU/plugin.xml
+++ b/DevCPU/plugin.xml
@@ -519,9 +519,8 @@
    </extension>
    <extension
          point="devcpu.hardware">
-      <hardware
+      <device
             class="devcpu.emulation.VirtualMonitor"
-            hardwareId="devcpu.lem1802"
             icon="icons/lem.png"
             id="devcpu.lem1802"
             name="LEM1802">
@@ -529,10 +528,9 @@
                class="devcpu.views.LEM1802View"
                viewId="devcpu.views.LEM1802View">
          </hardwareView>
-      </hardware>
-      <hardware
+      </device>
+      <device
             class="devcpu.emulation.VirtualKeyboard"
-            hardwareId="devcpu.keyboard"
             icon="icons/keyboard.png"
             id="devcpu.keyboard"
             name="Generic Keyboard">
@@ -540,17 +538,15 @@
                class="devcpu.views.KeyboardView"
                viewId="devcpu.views.KeyboardView">
          </hardwareView>
-      </hardware>
-      <hardware
+      </device>
+      <device
             class="devcpu.emulation.VirtualClock"
-            hardwareId="devcpu.clock"
             icon="icons/clock.png"
             id="devcpu.clock"
             name="Generic Clock">
-      </hardware>
-      <hardware
+      </device>
+      <device
             class="devcpu.emulation.VirtualVectorDisplay"
-            hardwareId="devcpu.sped3"
             icon="icons/sped.png"
             id="devcpu.sped3"
             name="SPED-3">
@@ -558,21 +554,19 @@
                class="devcpu.views.SPED3View"
                viewId="devcpu.views.SPED3View">
          </hardwareView>
-      </hardware>
-      <hardware
+      </device>
+      <device
             class="devcpu.emulation.VirtualSleepChamber"
-            hardwareId="devcpu.spc2000"
             icon="icons/spc.png"
             id="devcpu.spc2000"
             name="SPC2000">
-      </hardware>
-      <hardware
+      </device>
+      <device
             class="devcpu.emulation.VirtualFloppyDrive"
-            hardwareId="devcpu.m35fd"
             icon="icons/fd.png"
             id="devcpu.m35fd"
             name="M35FD">
-      </hardware>
+      </device>
    </extension>
 <!--    <extension
          point="org.eclipse.debug.ui.launchShortcuts">
